[package]
name = "QuickSSDChecker"
version = "0.1.1"
edition = "2024"

[dependencies]
eframe = "0.22.0"
egui = "0.22.0"
rfd = "0.17.1"
dirs = "5.0.1"

# 用于检测管理员权限和界面功能（Windows 专用）
winapi = { version = "0.3.9", features = ["securitybaseapi", "winbase", "winnt", "winuser", "processthreadsapi"] }

[build-dependencies]
winres = "0.1.12"
embed-resource = "1.5.1"
